attempt of error fix

--- a/FinalAssignment/app/src/main/res/values/strings.xml
+++ b/FinalAssignment/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Final Assignment</string>
     <string name="title_activity_maps">Map</string>
+    <string name="api_key">AIzaSyC4KzI9U0Rfhscu8BqkZoUObZBFtQ7Wh7w</string>
 </resources>
